mudei o nome da pasta e adicionei um link

--- a/desafio de site com css/index.html
+++ b/desafio de site com css/index.html
@@ -136,7 +136,7 @@
         </article>
     </main>
     <footer>
-        <p>Site desenvolvido por Guilherme Rodrigues Soares</p>
+        <p>Site desenvolvido por Guilherme Rodrigues Soares, durante o curso de Html5 e Css3 do <a href="https://www.youtube.com/@CursoemVideo">Curso em Vídeo</a>.</p>
     </footer>  
 </body>
 </html>
